tests/expectations/compiler/operations/abs_type_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected a signed integer but type `u16` was found.
    --> compiler-test:5:24
     |
   5 |         return (true ? 1u16.abs() : 2u16.abs()) as u8;
     |                        ^^^^^^^^^^
Error [ETYC0372117]: Expected a signed integer but type `u16` was found.
    --> compiler-test:5:37
     |
   5 |         return (true ? 1u16.abs() : 2u16.abs()) as u8;
     |                                     ^^^^^^^^^^
"""]
